# student-dropout-academic-success

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
artifacts/: label_encoder.pkl  preprocessor.pkl
notebooks/: Final_Project_SectionX_Team6.ipynb  student_dropout_analysis.ipynb
scripts/: train.py
src/dropout/: __init__.py  config.py
src/dropout/api/: routes.py  schemas.py
src/dropout/data/: loader.py
src/dropout/features/: engineer.py
src/dropout/models/: __init__.py  predictor.py  trainer.py
src/dropout/ui/: app.py
